Fixing scrollbar

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -131,6 +131,7 @@ button:hover .friend-text {
 
 .scrollbar::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 .scrollbar::-webkit-scrollbar-track {
